Structured the project folder, TODO : refactor TSP parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "tsp_parser_q.h": "c",
-        "two_opt.h": "c"
+        "two_opt.h": "c",
+        "globals.h": "c"
     }
 }
