--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,17 +2,17 @@
 # structure of makefile recommanded by user Hilton Lipschitz, indeed it is quite nice 10/10 would use again
 
 CC := gcc
-SRCDIR := src
-BUILDDIR := build
-TARGET := bin/tsp
+SRCDIR := ../src
+BUILDDIR := ../build
+TARGET := tests
 
 SRCEXT := c
 SOURCES := $(shell find $(SRCDIR) -type f)
 OBJECTS := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.o))
 CFLAGS := -Wall -g
-INC := -I include
+INC := -I ../include
 
-$(TARGET): $(OBJECTS) main.o
+$(TARGET): $(OBJECTS) tests.o
 	@echo " Linking..."
 	@echo " $(CC) $^ -o $(TARGET) "; $(CC) $^ -o $(TARGET) -lm
 
@@ -21,14 +21,11 @@ $(BUILDDIR)/%.o: $(SRCDIR)/%.$(SRCEXT)
 	@mkdir -p $(BUILDDIR)
 	@echo " $(CC) $(CFLAGS) $(INC) -c -o $@ $<"; $(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
-main.o: main.c
-	gcc -Wall -g -I include -c -o main.o main.c -lm
+tests.o: tests.c
+	gcc -Wall -g $(INC) -c -o tests.o tests.c -lm
 
 clean:
 	echo " Cleaning... ";
 	@echo " $(RM) -r $(BUILDDIR) $(TARGET)"; $(RM) -r $(BUILDDIR) $(TARGET)
 
-cleantest:
-	rm tests.o
-
-.PHONY: clean cleantest
+.PHONY: clean
